@@ -389,6 +389,7 @@ Version 1.13.0-dev:
    * Image path function ~SCALE_SHARP added, analogous to ~SCALE but using nearest neighbor algo.
    * Image path function ~Alpha added. Takes no arguments, plots the alpha channel in greyscale.
      Mainly useful for diagnostics of other ipf combinations, or debugging the engine itself.
+   * Image path function ~Wipe_Alpha added. Again mainly useful for diagnostics.
 
 Version 1.11.11:
  * Add-ons server:
